@@ -9,4 +9,7 @@ include rfctools_common/__init__.py
 include rfctools_common/templates/svg.rng
 include rfctools_common/templates/rfc7991.rng
 include rfctools_common/templates/svg-1.2-rfc.rng
+include rfctools_common/templates/rfc2629.dtd
+include rfctools_common/templates/rfc2629-other.ent
+include rfctools_common/templates/rfc2629-xhtml.ent
 
