@@ -1,3 +1,9 @@
+rfclint (0.5.2) distribution(s); urgency=low
+
+	* Add test case for v2 dtd path searching
+
+-- Jim Schaad <ietf@augustcellars.com>  Fri 30 Mar 2018 12:00:00 -0700
+
 rfclint (0.5.1) distribution(s); urgency=low
 
 	* Set up to all for publishing to PyPI
